--- a/common.pt_BR.po
+++ b/common.pt_BR.po
@@ -4,7 +4,7 @@
 #
 # Translators:
 # Ivan Paulos Tomé <greylica@gmail.com>, 2016
-# Jean Trindade Pereira <jean_trindade2@hotmail.com>, 2015,2018-2022
+# Jean Trindade Pereira <jean_trindade2@hotmail.com>, 2015,2018-2022,2024
 # Mirio <opivy@hotmail.de>, 2017
 # NotThatPrivate Yes <henriqueferreira2009@gmail.com>, 2015
 # Ricardo Manuel da Cruz Coelho da Silva <ricardo.mccs@gmail.com>, 2015
@@ -18,7 +18,8 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-11 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: zerowhy . <anymailz@tutanota.com>, 2021\n"
+"Last-Translator: Jean Trindade Pereira <jean_trindade2@hotmail.com>, "
+"2015,2018-2022,2024\n"
 "Language-Team: Portuguese (Brazil) (http://app.transifex.com/team-xonotic/"
 "xonotic/language/pt_BR/)\n"
 "Language: pt_BR\n"
@@ -31,7 +32,7 @@ msgstr ""
 #: qcsrc/client/hud/hud_config.qc:80
 #, c-format
 msgid "^2Successfully exported to %s! (Note: It's saved in data/data/)"
-msgstr "^2Exportado com sucesso para %s! (Nota: foi salvo em data/data/)"
+msgstr "^2Exportado para %s! (Observação: foi salvo em data/data/)"
 
 #: qcsrc/client/hud/hud_config.qc:84
 #, c-format
