--- a/common.ja_JP.po
+++ b/common.ja_JP.po
@@ -9,7 +9,7 @@
 # LegendGuard, 2020
 # LegendGuard, 2020-2024
 # Lento <securemailfor28-xonotic@yahoo.co.jp>, 2015
-# RYU N. <ryusho2523@yahoo.co.jp>, 2021
+# RYU N. <ryusho2523@yahoo.co.jp>, 2021,2024
 # z 411 <winrar.hurr@gmail.com>, 2021-2022
 msgid ""
 msgstr ""
@@ -17,7 +17,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-05-11 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: RYU N. <ryusho2523@yahoo.co.jp>, 2021\n"
+"Last-Translator: RYU N. <ryusho2523@yahoo.co.jp>, 2021,2024\n"
 "Language-Team: Japanese (Japan) (http://app.transifex.com/team-xonotic/"
 "xonotic/language/ja_JP/)\n"
 "Language: ja_JP\n"
@@ -625,11 +625,11 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/scoreboard.qc:146
 msgid "The total damage dealt"
-msgstr ""
+msgstr "受けたダメージの合計"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:147
 msgid "SCO^damage taken"
-msgstr ""
+msgstr "SCO^受けたダメージ"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:147
 msgid "The total damage taken"
@@ -693,11 +693,11 @@ msgstr "FRAG数"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:155
 msgid "Number of generators destroyed"
-msgstr ""
+msgstr "破壊したジェネレーターの数"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:155
 msgid "SCO^generators"
-msgstr ""
+msgstr "SCO^ジェネレーター"
 
 #: qcsrc/client/hud/panel/scoreboard.qc:156
 msgid "Number of goals scored"
@@ -1781,7 +1781,7 @@ msgstr "試合が終了する前に必要な削除の量"
 
 #: qcsrc/common/minigames/cl_minigames.qc:287
 msgid "Spectators:"
-msgstr ""
+msgstr "観戦者:"
 
 #: qcsrc/common/minigames/cl_minigames.qc:424
 msgid "It's your turn"
